Fix P align

--- a/scss/base/_global.scss
+++ b/scss/base/_global.scss
@@ -28,6 +28,11 @@ p {
   letter-spacing: 0.005em;
   line-height: 1.875rem;
   margin-bottom: 1.5rem;
+  text-align: center;
+
+  @media (min-width: 80rem) {
+    text-align: left;
+  }
 }
 
 .input-1 {
