--- a/scss/components/_features.scss
+++ b/scss/components/_features.scss
@@ -23,6 +23,10 @@
     right: 0;
   }
 
+  & p {
+    text-align: left;
+  }
+
   & a {
     align-items: center;
     border-bottom: .125rem solid var(--clr-accent-cyan-400);
